<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_map_tools</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bednaj14@fel.cvut.cz">honzabednar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
