<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bednaj14@fel.cvut.cz">honzabednar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>boost</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>boost</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

 <depend>rclcpp</depend>
 <depend>sensor_msgs</depend>
         
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
